Integração ao backend